navigation bar overflow fixed.

--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -105,15 +105,6 @@
   display: none;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
@@ -122,20 +113,53 @@ input:-webkit-autofill:active {
   -webkit-box-shadow: 0 0 0 30px var(--gray-700) inset !important;
 }
 
-.app-container {
-  display: flex;
-  scrollbar-gutter: stable;
-  flex-direction: column;
-  min-height: 100vh;
-  font-family: 'Oswald', sans-serif;
-}
+//html,
+//body {
+//  //overflow-x: hidden;
+//  //height: 100%;
+//  //margin: 0;
+//  //padding: 0;
+//
+//  height: 100%;
+//  overflow-x: hidden;
+//  overflow-y: auto;
+//  //scrollbar-gutter: stable;
+//  margin: 0;
+//  padding: 0;
+//  font-family: 'Oswald', sans-serif;
+//  background-color: var(--main_page_bckg);
+//  color: var(--main_page_text);
+//  scrollbar-color: var(--gray-100) var(--gray-900);
+//}
 
-/* Контент між хедером і футером */
-.main {
-  flex-grow: 1;
+html {
+  height: auto;
+  min-height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
+  scrollbar-gutter: stable;
+  margin: 0;
+  padding: 0;
+  font-family: 'Oswald', sans-serif;
   background-color: var(--main_page_bckg);
   color: var(--main_page_text);
   scrollbar-color: var(--gray-100) var(--gray-900);
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  background: none;
+}
+
+.wrapper {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.main{
+  flex: 1 1 auto;
 }
 
 /* Заголовок секції - span */
